syntax = "proto3";

package model;

option java_package = "medical.main.proto";

import "google/protobuf/empty.proto";

service IdentityManagementService{
    rpc Authorize(Account) returns (Token) {};
    rpc Register(Account) returns (IdentityResponse) {};
    rpc Validate(Token) returns (IdentityResponse) {};
    rpc Invalidate(Token) returns (google.protobuf.Empty);
    rpc DeleteUser(Account) returns (google.protobuf.Empty);
}

message Account{
    string login = 1;
    string password = 2;
    uint32 role = 3;
}

message IdentityResponse{
    int64 id = 1;
    uint32 role = 2;
}

message Token{
    string token = 1;
}
